Ensure first message is not cut off in iOS theme

--- a/Signal/stylesheets/manifest.css
+++ b/Signal/stylesheets/manifest.css
@@ -2187,7 +2187,10 @@ span.status {
     display: none; }
 
 .ios .conversation .panel {
-  height: 100%; }
+  position: absolute;
+  top: 64px;
+  bottom: 0;
+  width: 100%; }
 
 .ios .settings h3,
 .ios .menu-list li {
